Bug 258926 - kmail2: Folders are not translated in main view (regression)
Summary: kmail2: Folders are not translated in main view (regression)
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 2.0.89
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 261806 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-05 18:04 UTC by Johannes Obermayr
Modified: 2012-07-11 18:43 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments
available 'sent-mail' messages for translation (57.39 KB, image/png)
2010-12-07 19:29 UTC, Johannes Obermayr
Details
Current folders (17.51 KB, image/png)
2012-07-08 16:51 UTC, Johannes Obermayr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Obermayr 2010-12-05 18:04:08 UTC
Version:           2.0.89 (using Devel) 
OS:                Linux

Below structure should be translatable.

If you do not know how you can do it please tell where (source file[s] with line[s]) the GUI reads the folders from (akonadi) resources.

I assume Albert is then willing to help ...

▼ KMail Folders
│  ├ drafts
│  ├ inbox
│  ├ outbox
│  ├ sent-mail
│  ├ templates
│  └ trash
▼ Local Folders
   ├ drafts
   ├ inbox
   ├ outbox
   ├ sent-mail
   ├ templates
   └ trash

Reproducible: Always
Comment 1 Laurent Montel 2010-12-07 13:47:31 UTC
It's translatable.
If I remember it stored as translated.
Comment 2 Johannes Obermayr 2010-12-07 19:29:39 UTC
Created attachment 54264 [details]
available 'sent-mail' messages for translation

From where should kmail take the translation for e.g. 'sent-mail'?

The screenshot shows only two .po[t] (kmail-migrator.po[t] and kalarm.po[t]) which contain the message 'sent-mail' in current trunk.

I do not assume the mentioned files are loaded by kmail at runtime.

But I assume there must be a i18n thinggy implemented in kmail ...
Comment 3 Johannes Obermayr 2011-01-01 20:09:37 UTC
*** Bug 261806 has been marked as a duplicate of this bug. ***
Comment 4 m.wege 2011-01-01 20:18:52 UTC
I would add the Junk-Folder to that list. I know Kmail is not actively using it, but such folders are being created by other programms and it is possible to select the Junk-folder as spam-folder in Kmail. Then it should be localised too.
Comment 5 m.wege 2011-01-01 20:20:11 UTC
At it should be not only the local folders (as in the above example), but also the folders from an IMAP-resource.
Comment 6 Johannes Obermayr 2011-01-01 20:28:50 UTC
There are now three files which contain 'sent-mail':

- kdepim/kmail-migrator.po[t]
- kdepim/kalarm.po[t]
- kdepimlibs/libakonadi-kmime.po[t]

I assume 'kmail-migrator' produce localized folders if you have a translated 'kmail-migrator.po' installed.
But what happens if you have not installed a translated 'kmail-migrator.po' when migrating? - Yes. It will stay for ever in English ...
Or what happens when you change language?
Comment 7 m.wege 2011-01-01 20:33:24 UTC
Actually when I started kmail-migrator it was partially localised. Also the migration did not go through to the end. May be also the reason why I have "Kmail Folders" instead of "Local Folders" (which BTW I really would like to change, so if someone has a hint).
Comment 8 Laurent Montel 2012-07-08 16:43:33 UTC
Still valid ?
Comment 9 Johannes Obermayr 2012-07-08 16:51:05 UTC
Created attachment 72372 [details]
Current folders

Seems it is still valid ...
Comment 10 Laurent Montel 2012-07-08 18:22:06 UTC
Do you tested it with a new account ?
Because if when you created your kmail and there is not translate code it will not translate after.
We store this translated string in server.
So if we change after it will not updated.
Comment 11 Johannes Obermayr 2012-07-08 20:04:24 UTC
(In reply to comment #10)
> Do you tested it with a new account ?
How can I do it containing emails from current folders?

> Because if when you created your kmail and there is not translate code it
> will not translate after.
Comment 6 ...

> We store this translated string in server.
Comment 1 ...

> So if we change after it will not updated.
Comment 6 ...

The proper solution is to store it internally with english strings and localize it via GUI.

@Albert: I'm right?
Comment 12 Albert Astals Cid 2012-07-09 18:31:38 UTC
Johannes: Yes, that is one of the possible fixes, but on the other hand will make stuff look different in kmail than in "other client you use to access the imap server". So another solution is "knowing" which folders in the server are the "special ones" (i hope we can have another handle other than name) and "retranslating" them on every start of kmail
Comment 13 Laurent Montel 2012-07-11 18:42:12 UTC
Git commit 921c7ed00f647fd4c813ebc59742873fbfa8c697 by Montel Laurent.
Committed on 11/07/2012 at 20:41.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 258926 - kmail2: Folders are not translated in main view

(regression
(need kdepim/mailcommon too)

FIXED-IN: 4.9

M  +1    -1    CMakeLists.txt
M  +49   -2    akonadi/kmime/specialmailcollections.cpp
M  +3    -0    akonadi/kmime/specialmailcollections.h

http://commits.kde.org/kdepimlibs/921c7ed00f647fd4c813ebc59742873fbfa8c697
Comment 14 Laurent Montel 2012-07-11 18:43:15 UTC
Git commit abfadd427c29808eca7fa12ecdd54f8ee8690125 by Montel Laurent.
Committed on 11/07/2012 at 20:42.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 258926 - kmail2: Folders are not translated in main view

FIXED-IN: 4.9

M  +1    -1    CMakeLists.txt
M  +6    -0    mailcommon/mailkernel.cpp

http://commits.kde.org/kdepim/abfadd427c29808eca7fa12ecdd54f8ee8690125