Fix Bug 258926 - kmail2: Folders are not translated in main view

FIXED-IN: 4.9
BUG: 258926